gcc/testsuite/g++.dg/other/error19.C
// PR c++/33495

void foo()
{
  if (({while(true);})) // { dg-error "forbids|<statement>" }
    ;
}
